Improve 404 error page design and layout
Enhanced the 404 error page with styling and layout improvements.

--- a/404.html
+++ b/404.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="Index.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uh oh...</title>
 </head>
 <body>
-    <h2>NOT FOUND...</h2>
-    <p>...sorry</p>
+    <div>
+      <h2><i class="fi fi-rs-face-sad-sweat"></i> NOT FOUND...</h2>
+      <p>...sorry</p>
+    </div>
+
+    <style>
+        body {
+            background: #fffaf0;
+        }
+
+        div {
+            gap: 50px;
+            display: flex;
+            padding: 38px;
+            text-align: center;
+            border-radius: 4px;
+            align-items: center;
+            background: #fff5e2;
+            flex-direction: column;
+            justify-content: center;
+
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        i {
+            color: #ff8fbc;
+        }
+
+        h1, h2 {
+            color: #FF71A9;
+        }
+    </style>
 </body>
 </html>
