Add favicon and external stylesheet to 404 page

--- a/404.html
+++ b/404.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="Index.css">
+    <!-- Uicons by <a href="https://www.flaticon.com/uicons">Flaticon</a> -->
+    <link rel="shortcut icon" href="./Images/Favicon Side Wink!.png" type="image/x-icon">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uh oh...</title>
