Fix favicon link and improve HTML formatting
Updated favicon link and cleaned up HTML structure.

--- a/Landing.html
+++ b/Landing.html
@@ -4,7 +4,7 @@
     <!-- LIIIIINNNNNNNNKKKKKKKKKKSSSSSS!!!!! 🔗🔗 -->
     <link rel="stylesheet" href="Index.css">
     <!-- Uicons by <a href="https://www.flaticon.com/uicons">Flaticon</a> -->
-    <link rel="shortcut icon" href="./Images/Favicon Side Wink!.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
 
     <meta charset="UTF-8">
@@ -62,4 +62,5 @@
         }
     </style>
 </body>
+
 </html>
