Fix favicon source and clean up HTML
Updated favicon image source and adjusted HTML structure.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div>
-        <h2><img src="./Images/Favicon Side Wink!.png" alt="Favicon"> Yia!</h2>
+        <h2><img src="favicon.ico" alt="Favicon"> Yia!</h2>
         <p>
             The COMPLETELY FREE learning platform - NO HIDDEN COSTS!! <i class="fi fi-rr-coins"></i><br><br>
             In the making <i class="fi fi-rr-settings"></i><br>
@@ -64,4 +64,5 @@
 </body>
 
 </html>
+
 
